lang/macro/tests/ui/fail/S-03-struct-unknown-ink-marker.stderr
error: encountered unsupported ink! markers for struct
 --> $DIR/S-03-struct-unknown-ink-marker.rs:8:5
  |
8 | /     #[ink(unknown_or_unsupported)]
9 | |     struct HasUnknownMarker {}
  | |______________________________^

error: unsupported ink! marker for struct
 --> $DIR/S-03-struct-unknown-ink-marker.rs:8:10
  |
8 |     #[ink(unknown_or_unsupported)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^
